MIT Licenses and Analytics and refactoring, oh my!

--- a/canvas/index.html
+++ b/canvas/index.html
@@ -39,6 +39,8 @@
 					<li><a href="circles.html">Circles</a></li>
 					<li><a href="montecarlopi.html">Monte Carlo &Pi; Simulation</a></li>
 					<li><a href="life.html">Game of Life</a></li>
+					<li><a href="maze.html">Maze solving thoughts</a></li>
+					<li><a href="zia.html">Zia Symbol</a></li>
 				</ul>
 				<p>All pages are using a mix of the Prototype JS library and the HTML5 &lt;canvas&gt; element. All calculations take place in JavaScript, all drawing is done onto one or more canvases.</p>
 			</div> <!-- end #content -->
@@ -46,5 +48,14 @@
 				For the time being, all work &copy; 2008, Brian Arnold, All Rights Reserved
 			</div> <!-- end #footer -->
 		</div> <!-- end #wrapper -->
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-279164-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 	</body>
 </html>
