Lots of title changes, adding in new drum kit sounds

--- a/canvas/images.html
+++ b/canvas/images.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
-		<title>Canvas Playtime - Images</title>
+		<title>Images | Canvas Play | RandomThink Labs</title>
 		<style type="text/css">
 			body {
 				margin: 0px;
@@ -60,14 +60,16 @@
 				</div> <!-- expanded -->
 			</div> <!-- end #content -->
 			<div id="footer">
-				For the time being, all work &copy; 2008, Brian Arnold, All Rights Reserved
+				<p>Copyright &copy; 2009 Brian Arnold, under an <a href="/lab/LICENSE">MIT License</a></p>
 			</div> <!-- end #footer -->
 		</div> <!-- end #wrapper -->
-		<!-- Scripts down here for faster loads -->
-		<!-- Prototype -->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/prototype/1.6.0.2/prototype.js"></script>
-		<!-- Custom scripting -->
 		<script type="text/javascript">
+			/*
+			 * Images play
+			 * Copyright (c) 2009 Brian Arnold
+			 * Software licensed under MIT license, see http://www.randomthink.net/lab/LICENSE
+			 */
 			// When the full page has finished loading, fire up
 			Event.observe(window, "load", function() {
 				// Get our contexts
