--- a/canvas/index.html
+++ b/canvas/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
-		<title>Canvas Playtime | Brian's Lab</title>
+		<title>Canvas Play | RandomThink Labs</title>
 		<style type="text/css">
 			body {
 				margin: 0px;
@@ -34,18 +34,28 @@
 		<div id="wrapper">
 			<h1>Learning the <code>&lt;canvas&gt;</code> and Prototype</h1>
 			<div id="content">
-				<h2>Various playtime tests</h2>
+				<h2>More stable experiments</h2>
 				<ul>
-					<li><a href="circles.html">Circles</a></li>
-					<li><a href="montecarlopi.html">Monte Carlo &Pi; Simulation</a></li>
 					<li><a href="life.html">Game of Life</a></li>
+					<li><a href="montecarlopi.html">Monte Carlo &Pi; Approximator</a></li>
 					<li><a href="maze.html">Maze solving thoughts</a></li>
-					<li><a href="zia.html">Zia Symbol</a></li>
+				</ul>
+				<h2>Less stable and/or little one-offs</h2>
+				<ul>
+					<li><a href="images.html">Image Experiments</a></li>
+					<li><a href="circles.html">Circles</a></li>
+					<li>Zia Symbol: Had to draw a few for a site, found it easier to script:
+						<ul>
+							<li><a href="zia.html">Zia Symbol, NM Flag Style-ish</a></li>
+							<li><a href="zia_base.html">First stab at a Zia Symbol</a></li>
+							<li><a href="zia_wide.html">Zia Symbol stretching to the right</a>, eventually used like a header image</li>
+						</ul>
+					</li>
 				</ul>
 				<p>All pages are using a mix of the Prototype JS library and the HTML5 &lt;canvas&gt; element. All calculations take place in JavaScript, all drawing is done onto one or more canvases.</p>
 			</div> <!-- end #content -->
 			<div id="footer">
-				For the time being, all work &copy; 2008, Brian Arnold, All Rights Reserved
+				<p>Copyright &copy; 2009 Brian Arnold, under an <a href="/lab/LICENSE">MIT License</a></p>
 			</div> <!-- end #footer -->
 		</div> <!-- end #wrapper -->
 <script type="text/javascript">
