--- a/canvas/life.html
+++ b/canvas/life.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
-		<title>Game of Life | Canvas Playtime | Brian's Lab</title>
+		<title>Game of Life | Canvas Play | RandomThink Labs</title>
 		<style type="text/css">
 			body {
 				margin: 0px;
@@ -75,13 +75,11 @@
 				<div id="life"></div>
 			</div> <!-- end #content -->
 			<div id="footer">
-				For the time being, all work &copy; 2008, Brian Arnold, All Rights Reserved
+				<p>Copyright &copy; 2009 Brian Arnold, under an <a href="/lab/LICENSE">MIT License</a></p>
+				<p>Code originally written in 2008 and in serious need of reworking, apologies.</p>
 			</div> <!-- end #footer -->
 		</div> <!-- end #wrapper -->
-		<!-- Scripts down here for faster loads -->
-		<!-- Prototype -->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/prototype/1.6.0.2/prototype.js"></script>
-		<!-- Browser check -->
 		<script type="text/javascript">
 			// Kick out the filthy IE users such as my friend James ;)
 			if (Prototype.Browser.IE) {
@@ -89,9 +87,7 @@
 				location.href("http://www.disney.com");
 			}
 		</script>
-		<!-- Game of Life -->
 		<script type="text/javascript" src="life.js"></script>
-		<!-- Custom scripting -->
 		<script type="text/javascript">
 			// Initialize our arguments
 			var div_id = "life";
