--- a/video/thumbs.html
+++ b/video/thumbs.html
@@ -15,7 +15,7 @@
 			<h2>What it does</h2>
 			<p>Simply just a means of generating timed thumbnails of a video</p>
 			<h3>Video</h3>
-			<video id="src" autobuffer controls style="display: none;">
+			<video id="src" controls="controls">
 				<source src="BigBuckBunny_640x360.mp4" type="video/mp4" />
 				<source src="BigBuckBunny_640x360.ogv" type="video/ogg" />
 			</video>
