Some display tweaks, looks a little better now

--- a/dojo/colormix.html
+++ b/dojo/colormix.html
@@ -22,7 +22,9 @@
 				</ul>
 			</section>
 			<section id="loading">
-				Loading, please wait...
+				<strong>Loading, please wait...</strong>
+				<img src="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/claro/images/loadingAnimation.gif" alt="Loading..." />
+		<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/claro/claro.css">
 			</section>
 			<section id="content" style="display: none;">
 				<div id="colors" class="colorwrap">
