Putting in non-console output

--- a/canvas/drawspeed.html
+++ b/canvas/drawspeed.html
@@ -17,6 +17,7 @@
 				<button id="startJS">Overwrite in pure JS canvas, writing that out once</button>
 			</div>
 			<canvas id="canvas" width="400" height="400">This browser doesn't support canvas. Sucks to be you.</canvas>
+			<div id="output"></div>
 		</section>
 		<script src="drawspeed.js"></script>
 	</body>
