Fixing a stupid typo

--- a/canvas/drawspeed.html
+++ b/canvas/drawspeed.html
@@ -22,7 +22,7 @@
 			<div id="output"></div>
 		</section>
 		<footer>
-		<p><em>Alpha</em> by <a href="http://www.randomthink.net/">Brian Arnold</a>, MIT licensed so snag away</p>
+		<p><em>Canvas Perf Testing</em> by <a href="http://www.randomthink.net/">Brian Arnold</a>, MIT licensed so snag away</p>
 		</footer>
 		<!-- Mmm, scripts -->
 		<script src="drawspeed.js"></script>
