Bringing d3 in, whoops

--- a/d3/dots.html
+++ b/d3/dots.html
@@ -44,7 +44,7 @@
       </div>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="js/d3.js"></script>
+    <script src="d3.min.js"></script>
     <script src="dots.js"></script>
   </body>
 </html>
