--- a/web-audio-api/datacenter.html
+++ b/web-audio-api/datacenter.html
@@ -18,6 +18,6 @@
     </div>
 
     <script src="js/noise.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/datacenter.js"></script>
   </body>
 </html>
